add depcm sound first little success(it make noise)

--- a/training.ipynb
+++ b/training.ipynb
@@ -98,15 +98,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-17 23:29:08.967154: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-10-21 03:00:56.238039: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-10-17 23:29:09.712185: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 799 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1050, pci bus id: 0000:02:00.0, compute capability: 6.1\n"
+      "2022-10-21 03:00:56.899412: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 599 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1050, pci bus id: 0000:02:00.0, compute capability: 6.1\n"
      ]
     }
    ],
    "source": [
     "config = tf.compat.v1.ConfigProto()\n",
-    "config.gpu_options.per_process_gpu_memory_fraction = 0.4\n",
+    "config.gpu_options.per_process_gpu_memory_fraction = 0.3\n",
     "session = tf.compat.v1.Session(config=config)"
    ]
   },
@@ -140,7 +140,7 @@
      "text": [
       "CPU|/device:CPU:0 memory limit: 268435456\n",
       "\n",
-      "GPU|/device:GPU:0 memory limit: 838257868\n",
+      "GPU|/device:GPU:0 memory limit: 628693401\n",
       "device: 0, name: NVIDIA GeForce GTX 1050, pci bus id: 0000:02:00.0, compute capability: 6.1\n"
      ]
     },
@@ -148,7 +148,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-17 23:29:09.718857: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /device:GPU:0 with 799 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1050, pci bus id: 0000:02:00.0, compute capability: 6.1\n"
+      "2022-10-21 03:00:56.908438: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /device:GPU:0 with 599 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1050, pci bus id: 0000:02:00.0, compute capability: 6.1\n"
      ]
     }
    ],
@@ -252,21 +252,12 @@
     "    cap = cv2.VideoCapture(file + '.avi')\n",
     "    if (cap.isOpened()== False): \n",
     "      print(\"Error opening video stream or file\")\n",
-    "openCap('testfiles/pal/whitenosie')"
+    "openCap('./dataset/video')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "openCap('testfiles/pal/whitenosie')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -275,7 +266,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7501\n",
+      "1501\n",
       "882\n"
      ]
     }
@@ -303,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,13 +347,15 @@
     "        \n",
     "def pairwise(iterable):\n",
     "    a = iter(iterable)\n",
+    "    if len(iterable) % 6 != 0:\n",
+    "            print(f'input length detected that is not divisible by 6! all data after the {len(iterable)-(len(iterable) % 6)}({len(iterable) % 6} cells) position will be ignored.')\n",
     "    return zip(a, a, a, a, a, a)\n",
     "    \n",
     "def Abreacker(sample):\n",
     "    global bufR0, bufL1, bufR1, bufR2, bufL2\n",
-    "    filtered = np.array([], dtype=np.int16)\n",
-    "    line = np.zeros(6, dtype=np.int16)\n",
-    "    \n",
+    "    filtered = np.array([], dtype=np.uint16)\n",
+    "    line = np.zeros(6, dtype=np.uint16)\n",
+    "\n",
     "    for elem in pairwise(sample):\n",
     "        bufR0.append(elem[1])\n",
     "        bufL1.append(elem[2])\n",
@@ -383,15 +376,73 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "source": [
+    "def initQueuesForDebreacker():\n",
+    "    global bufL0D, bufR0D, bufL1D, bufR1D, bufL2D\n",
+    "    bufL0D = deque()\n",
+    "    bufR0D = deque()\n",
+    "    bufL1D = deque()\n",
+    "    bufR1D = deque()\n",
+    "    bufL2D = deque()\n",
+    "    \n",
+    "    for i in range(5*16):\n",
+    "        bufL0D.append(0)\n",
+    "        \n",
+    "    for i in range(4*16):\n",
+    "        bufR0D.append(0)\n",
+    "    \n",
+    "    for i in range(3*16):\n",
+    "        bufL1D.append(0)\n",
+    "    \n",
+    "    for i in range(2*16):\n",
+    "        bufR1D.append(0)\n",
+    "    \n",
+    "    for i in range(1*16):\n",
+    "        bufL2D.append(0)\n",
+    "        \n",
+    "def Adebreacker(sample):\n",
+    "    global bufL0D, bufR0D, bufL1D, bufR1D, bufL2D\n",
+    "    filtered = np.array([], dtype=np.uint16)\n",
+    "    line = np.zeros(6, dtype=np.uint16)\n",
+    "    \n",
+    "    for elem in pairwise(sample):\n",
+    "        bufL0D.append(elem[0])\n",
+    "        bufR0D.append(elem[1])\n",
+    "        bufL1D.append(elem[2])\n",
+    "        bufR1D.append(elem[3])\n",
+    "        bufL2D.append(elem[4])\n",
+    "        \n",
+    "        line[0] = bufL0D.popleft()\n",
+    "        line[1] = bufR0D.popleft()\n",
+    "        line[2] = bufL1D.popleft()\n",
+    "        line[3] = bufR1D.popleft()\n",
+    "        line[4] = bufL2D.popleft()\n",
+    "        line[5] = elem[5]\n",
+    "                \n",
+    "        filtered = np.append(filtered, line)\n",
+    "    \n",
+    "    return filtered\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-17 23:29:09.802191: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 799 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1050, pci bus id: 0000:02:00.0, compute capability: 6.1\n"
+      "2022-10-21 03:00:57.814804: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 599 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1050, pci bus id: 0000:02:00.0, compute capability: 6.1\n"
      ]
     }
    ],
@@ -425,7 +476,7 @@
     "        #video\n",
     "        vframe = getNext()[1]\n",
     "        \n",
-    "        yield vframe, (Abreacker(tf.io.decode_raw(frame, tf.int16, little_endian=True).numpy())/32767)\n",
+    "        yield vframe, (Abreacker(tf.io.decode_raw(frame, tf.uint16, little_endian=True).numpy())/65535)\n",
     "\n",
     "        \n",
     "dataset=tf.data.Dataset.from_generator(\n",
@@ -447,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,44 +507,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(None, 312, 312)\n",
-      "(None, 27, 27, 3)\n",
-      "diff H:-267.0   W:21    total:423\n"
+      "(None, 312, 360)\n",
+      "(None, 312, 6, 4)\n",
+      "diff total:5724\n"
      ]
     }
    ],
    "source": [
-    "x = tf.keras.layers.Rescaling(1./127.5, name='normalize')(input)\n",
+    "x = tf.keras.layers.Rescaling(1./255, name='normalize')(input)\n",
     "i = 1\n",
-    "x = tf.keras.layers.Conv1D(312, 1, activation='tanh', name=f'conv1d_{i}')(x)\n",
+    "x = tf.keras.layers.Conv1D(360, 1, activation='sigmoid', name=f'conv1d_{i}')(x)\n",
     "#i +=1\n",
-    "#x = tf.keras.layers.Conv1D(18, 1, activation='sigmoid', name=f'conv1d_{i}')(x)\n",
+    "#x = tf.keras.layers.Conv1D(360, 1, activation='sigmoid', name=f'conv1d_{i}')(x)\n",
     "\n",
     "print(x.shape)\n",
     "\n",
     "x = tf.keras.layers.Reshape((x.shape[1], x.shape[2], 1))(x)\n",
-    "\n",
+    "#\n",
     "i = 1\n",
-    "x = tf.keras.layers.Conv2D(2, 128, activation='tanh', name=f'conv2d_{i}')(x)\n",
+    "x = tf.keras.layers.Conv2D(4, (1, 4), strides=(1,2), activation='sigmoid', name=f'conv2d_{i}')(x)\n",
     "i +=1\n",
-    "x = tf.keras.layers.Conv2D(2, 128, activation='tanh', name=f'conv2d_{i}')(x)\n",
+    "x = tf.keras.layers.Conv2D(4, (1, 2), strides=(1,2), activation='relu', name=f'conv2d_{i}')(x)\n",
     "i +=1\n",
-    "x = tf.keras.layers.Conv2D(3, 32, activation='tanh', name=f'conv2d_{i}')(x)\n",
-    "\n",
+    "x = tf.keras.layers.Conv2D(4, (1, 14), strides=(1,14), activation='relu', name=f'conv2d_{i}')(x)\n",
+    "#i +=1\n",
+    "#x = tf.keras.layers.Conv2D(3, 32, activation='sigmoid', name=f'conv2d_{i}')(x)\n",
+    "#\n",
     "print(x.shape)\n",
-    "print(f'diff H:{x.shape[1]-(samplesPerFrame/3)}   W:{x.shape[2]-6}    total:{x.shape[1]*x.shape[2]*x.shape[3]-(samplesPerFrame*2)}') "
+    "print(f'diff total:{x.shape[1]*x.shape[2]*x.shape[3]-(samplesPerFrame*2)}') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,47 +555,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "x = tf.keras.layers.Dense((samplesPerFrame*2), activation='relu', use_bias=True, name='audio')(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = tf.keras.layers.Dense(x.shape[1], activation='tanh', bias_initializer='zeros', use_bias=True, name='layer_1')(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " image (InputLayer)          [(None, 312, 720)]        0         \n",
+      "                                                                 \n",
+      " normalize (Rescaling)       (None, 312, 720)          0         \n",
+      "                                                                 \n",
+      " conv1d_1 (Conv1D)           (None, 312, 360)          259560    \n",
+      "                                                                 \n",
+      " reshape (Reshape)           (None, 312, 360, 1)       0         \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 312, 179, 4)       20        \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 312, 89, 4)        36        \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (None, 312, 6, 4)         228       \n",
+      "                                                                 \n",
+      " Flatten (Flatten)           (None, 7488)              0         \n",
+      "                                                                 \n",
+      " audio (Dense)               (None, 1764)              13210596  \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 13,470,440\n",
+      "Trainable params: 13,470,440\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
-    "output = tf.keras.layers.Dense((samplesPerFrame*2), activation='tanh', bias_initializer='zeros', use_bias=True, name='audio')(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "model = keras.Model(input, output)\n",
+    "model = keras.Model(input, x)\n",
     "model.summary()\n",
     "\n",
-    "#tf.keras.utils.plot_model(\n",
-    "#    model,\n",
-    "#    to_file=\"model.png\",\n",
-    "#    show_shapes=True,\n",
-    "#    show_dtype=False,\n",
-    "#    show_layer_names=True,\n",
-    "#    rankdir=\"TB\",\n",
-    "#    expand_nested=True,\n",
-    "#    dpi=96,\n",
-    "#    layer_range=None,\n",
-    "#    show_layer_activations=True,\n",
-    "#)"
+    "#tf.keras.utils.plot_model(model, to_file=\"model.png\", show_shapes=True, show_dtype=False, show_layer_names=True, rankdir=\"TB\", expand_nested=True, dpi=96, layer_range=None, show_layer_activations=True)"
    ]
   },
   {
@@ -566,38 +633,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "model.compile(loss='mean_squared_error',\n",
     "              optimizer='adam',\n",
-    "              metrics=['accuracy', 'binary_accuracy', 'MeanAbsolutePercentageError'])"
+    "              metrics=['binary_accuracy', 'mean_squared_error', 'MeanAbsolutePercentageError'])\n",
+    "loss = 1\n",
+    "step = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "testfile = 'testfiles/pal/streetSrakerffV1'"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "!rm -rf ./logs/"
+    "!rm -rf ./logs/ ./model/ ./output/\n",
+    "!mkdir logs\n",
+    "!mkdir model\n",
+    "!mkdir output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#сделать обратную хуеверть для аудио нормального человека"
+    "#забыл про оббезку 480 ячеек после initQueuesForDebreacker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict():\n",
+    "    global step, testfile, vframe, model, cap\n",
+    "    initQueuesForDebreacker()\n",
+    "    \n",
+    "    openCap(testfile)\n",
+    "    bar = tqdm(total=int(cap.get(cv2.CAP_PROP_FRAME_COUNT)*2), ncols=100)\n",
+    "    file = wave.open(f'output/{step}.wav', mode='w')\n",
+    "    file.setnchannels(2) \n",
+    "    file.setsampwidth(2)\n",
+    "    file.setframerate(44100)\n",
+    "    ret, vframe = getNext()\n",
+    "    while ret:\n",
+    "        file.writeframes(Adebreacker(model.predict(vframe, verbose=0, batch_size=64)[0]*65535).astype(np.uint16).tobytes())\n",
+    "        bar.update(1)\n",
+    "        ret, vframe = getNext()\n",
+    "        if int(cap.get(cv2.CAP_PROP_POS_FRAMES)) > 25*2*20:    #limiting on 20 seconds\n",
+    "            ret = False\n",
+    "    bar.close()\n",
+    "    file.close()\n",
+    "    step = step +1"
    ]
   },
   {
@@ -611,38 +704,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "  14269/Unknown - 2433s 170ms/step - loss: 0.3888 - accuracy: 0.0000e+00 - binary_accuracy: 2.5747e-05 - mean_absolute_percentage_error: 3402.6050"
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-10-21 03:01:01.037472: I tensorflow/stream_executor/cuda/cuda_dnn.cc:384] Loaded cuDNN version 8500\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   3000/Unknown - 63s 20ms/step - loss: 0.1558 - binary_accuracy: 6.2193e-05 - mean_squared_error: 0.1558 - mean_absolute_percentage_error: 8907.8047"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-10-21 03:02:03.405546: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 3170119680 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3001/3001 [==============================] - 65s 21ms/step - loss: 0.1559 - binary_accuracy: 1.2403e-04 - mean_squared_error: 0.1559 - mean_absolute_percentage_error: 157466.7344\n",
+      "Epoch 2/10\n",
+      "1518/3001 [==============>...............] - ETA: 30s - loss: 0.1240 - binary_accuracy: 1.0466e-04 - mean_squared_error: 0.1240 - mean_absolute_percentage_error: 31961.6797"
      ]
     }
    ],
    "source": [
-    "loss = 1\n",
-    "step = 1\n",
-    "while loss >= 0.1:\n",
+    "testfile = 'testfiles/pal/FROZTEN_-_Domestic_Technology'\n",
+    "while loss >= 0.001:\n",
     "    log_dir = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
     "    tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
-    "    fitHistory = model.fit(dataset, epochs=5, batch_size=1, callbacks=[tensorboard_callback])\n",
+    "    fitHistory = model.fit(dataset, epochs=10, batch_size=64, callbacks=[tensorboard_callback])\n",
     "    model.save(f'model/{datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")}', save_format=\"h5\")\n",
-    "    if step%1 == 0:\n",
-    "        openCap(testfile)\n",
-    "        \n",
-    "        bar = tqdm(total=cap.get(cv2.CAP_PROP_FRAME_COUNT), ncols=100)\n",
-    "        file = wave.open(f'output/{step}.wav', mode='w')\n",
-    "        file.setnchannels(2) \n",
-    "        file.setsampwidth(2)\n",
-    "        file.setframerate(44100)\n",
-    "        ret, vframe = getNext()\n",
-    "        while ret:\n",
-    "            file.writeframes((model.predict(vframe, verbose=0)[0]*32767*16).astype(np.int16).tobytes())\n",
-    "            bar.update(1)\n",
-    "            ret, vframe = getNext()\n",
-    "            if int(cap.get(cv2.CAP_PROP_POS_FRAMES)) > 25*2*15:    #limiting 30 on seconds\n",
-    "                ret = False\n",
-    "        bar.close()\n",
-    "        file.close()\n",
-    "        step = step +1\n",
+    "    \n",
+    "    predict()\n",
+    "    \n",
     "    loss = fitHistory.history['loss'][0]"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "predict()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "model.predict(vframe, verbose=0)[0].max()"
    ]
   },
   {
@@ -651,7 +771,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%tensorboard --logdir logs/fit"
+    "list(dataset.take(1))[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%"
    ]
   }
  ],
